Make libpaste a source dependency.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -875,6 +875,19 @@
     <string name="log_submit_activity__thanks">Thanks for your help!</string>
     <string name="log_submit_activity__submitting">Submitting</string>
     <string name="log_submit_activity__no_browser_installed">No browser installed</string>
+    <string name="log_submit_activity__button_dont_submit">Don\'t submit</string>
+    <string name="log_submit_activity__button_submit">Submit</string>
+    <string name="log_submit_activity__button_got_it">Got it</string>
+    <string name="log_submit_activity__button_compose_email">Compose email</string>
+    <string name="log_submit_activity__this_log_will_be_posted_online">This log will be posted publicly online for contributors to view, you may examine and edit it before submitting.</string>
+    <string name="log_submit_activity__loading_logs">Loading logs…</string>
+    <string name="log_submit_activity__uploading_logs">Uploading logs…</string>
+    <string name="log_submit_activity__success">Success!</string>
+    <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Copy this URL and add it to your issue report or support email:\n\n<b>%1$s</b>\n</string>
+    <string name="log_submit_activity__copied_to_clipboard">Copied to clipboard</string>
+    <string name="log_submit_activity__choose_email_app">Choose email app</string>
+    <string name="log_submit_activity__please_review_this_log_from_my_app">Please review this log from my app: %1$s</string>
+    <string name="log_submit_activity__network_failure">Network failure. Please try again.</string>
 
     <!-- database_migration_activity -->
     <string name="database_migration_activity__would_you_like_to_import_your_existing_text_messages">Would you like to import your existing text messages into Signal\'s encrypted database?</string>
