--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -121,6 +121,7 @@
   <string name="ConversationActivity_message_is_empty_exclamation">Повідомлення порожнє!</string>
   <string name="ConversationActivity_group_members">Учасники групи</string>
   <string name="ConversationActivity_invalid_recipient">Неприпустимий отримувач!</string>
+  <string name="ConversationActivity_added_to_home_screen">Додано до домашнього екрану</string>
   <string name="ConversationActivity_calls_not_supported">Дзвінки не підтримуються</string>
   <string name="ConversationActivity_this_device_does_not_appear_to_support_dial_actions">Здається, цей пристрій не підтримує виклики.</string>
   <string name="ConversationActivity_leave_group">Покинути групу?</string>
@@ -388,6 +389,7 @@
   <string name="MessageRecord_called_s">Телефонували %s</string>
   <string name="MessageRecord_missed_call_from">Пропущено виклик від %s</string>
   <string name="MessageRecord_s_joined_signal">%s приєднався до Signal!</string>
+  <string name="MessageRecord_you_disabled_disappearing_messages">Ви заборонили зникаючі повідомлення</string>
   <string name="MessageRecord_your_safety_number_with_s_has_changed">Ваш номер безпеки із %s змінився.</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified">Ви підтвердили ваш номер безпеки із %s</string>
   <string name="MessageRecord_you_marked_your_safety_number_with_s_verified_from_another_device">Ви підтвердили ваш номер безпеки із %sз іншого пристрою</string>
@@ -524,6 +526,7 @@
   <string name="ThreadRecord_missed_call">Пропущений виклик</string>
   <string name="ThreadRecord_media_message">Медіа повідомлення</string>
   <string name="ThreadRecord_s_is_on_signal">%s приєднався до Signal!</string>
+  <string name="ThreadRecord_disappearing_messages_disabled">Зникаючі повідомлення заборонені</string>
   <string name="ThreadRecord_disappearing_message_time_updated_to_s">Час зникнення повідомлень встановлено на %s</string>
   <string name="ThreadRecord_safety_number_changed">Номер безпеки змінено</string>
   <string name="ThreadRecord_your_safety_number_with_s_has_changed">Ваш номер безпеки із %s змінився.</string>
@@ -602,7 +605,10 @@
   <!--Notification Channels-->
   <string name="NotificationChannel_messages">Типово</string>
   <string name="NotificationChannel_calls">Виклики</string>
+  <string name="NotificationChannel_failures">Відмови</string>
   <string name="NotificationChannel_backups">Резервні копії</string>
+  <string name="NotificationChannel_locked_status">Статус блокування</string>
+  <string name="NotificationChannel_app_updates">Оновлення додатку</string>
   <string name="NotificationChannel_other">Інший</string>
   <string name="NotificationChannel_group_messages">Повідомлення</string>
   <string name="NotificationChannel_missing_display_name">Невідомо</string>
@@ -784,8 +790,13 @@
   <string name="log_submit_activity__button_dont_submit">Не відсилати</string>
   <string name="log_submit_activity__button_submit">Відіслати</string>
   <string name="log_submit_activity__button_got_it">Ясно</string>
+  <string name="log_submit_activity__button_compose_email">Написати електронного листа</string>
+  <string name="log_submit_activity__loading_logs">Завантаження журналу...</string>
+  <string name="log_submit_activity__uploading_logs">Вивантаження журналу...</string>
   <string name="log_submit_activity__success">Успішно!</string>
   <string name="log_submit_activity__copied_to_clipboard">Скопійовано до буфера обміну</string>
+  <string name="log_submit_activity__choose_email_app">Обрати додаток електронної пошти</string>
+  <string name="log_submit_activity__network_failure">Помилка мережі. Будь ласка спробуйте ще раз.</string>
   <!--database_migration_activity-->
   <string name="database_migration_activity__would_you_like_to_import_your_existing_text_messages">Імпорутвати ваші SMS повідомлення у зашифровану базу даних Signal?</string>
   <string name="database_migration_activity__the_default_system_database_will_not_be_modified">Системна база даних не буде порушена.</string>
@@ -832,6 +843,7 @@
   <string name="recipient_preference_activity__shared_media">Спільні медіа</string>
   <!--recipient_preferences-->
   <string name="recipient_preferences__mute_conversation">Вимкнути звук для розмови</string>
+  <string name="recipient_preferences__custom_notifications_settings">Налаштування системних сповіщень</string>
   <string name="recipient_preferences__notification_sound">Звук сповіщення</string>
   <string name="recipient_preferences__vibrate">Вібрація</string>
   <string name="recipient_preferences__block">Заблокувати</string>
@@ -942,6 +954,7 @@
   <string name="preferences__inactivity_timeout_passphrase">Фраза-пароль після спливання часу неактивності</string>
   <string name="preferences__inactivity_timeout_interval">Інтервал часу неактивності</string>
   <string name="preferences__notifications">Сповіщення</string>
+  <string name="preferences__system_notification_settings">Налаштування системних сповіщень</string>
   <string name="preferences__led_color">Колір LED</string>
   <string name="preferences__led_color_unknown">Невідомо</string>
   <string name="preferences__pref_led_blink_title">Шаблон мерехтіння LED</string>
@@ -1074,6 +1087,7 @@
   <string name="conversation__menu_view_all_media">Всі медіа-файли
 Всі зображення</string>
   <string name="conversation__menu_conversation_settings">Налаштування розмови</string>
+  <string name="conversation__menu_add_shortcut">Додати до домашнього екрану</string>
   <!--conversation_popup-->
   <string name="conversation_popup__menu_expand_popup">Розгорнути спливаюче вікно</string>
   <!--conversation_callable_insecure-->
